--- a/Gopnik's Adventure/Storyboards/Base.lproj/LevelOne.storyboard
+++ b/Gopnik's Adventure/Storyboards/Base.lproj/LevelOne.storyboard
@@ -474,6 +474,11 @@
                                     <action selector="fireButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UcF-BL-1rX"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ih-ih-Qm0">
+                                <rect key="frame" x="353" y="35" width="46" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -542,6 +547,7 @@
                         <outlet property="characterImage" destination="dzt-hS-mgo" id="7o1-5m-4T8"/>
                         <outlet property="leftWallImage" destination="j0a-bV-WhJ" id="uz1-yp-41U"/>
                         <outlet property="rightWallImage" destination="hYF-Dn-6dY" id="crx-yc-vFc"/>
+                        <outlet property="teleportImage" destination="2ih-ih-Qm0" id="SAa-Pu-yKC"/>
                         <outlet property="topWallImage" destination="oHb-Ko-ZIc" id="1Pg-HO-hz9"/>
                     </connections>
                 </viewController>
